--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -189,14 +189,14 @@
     </symbol>
   </svg>
 
-  <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">HomeLink</a>
+  <header class="navbar sticky-top flex-md-nowrap p-0 shadow" data-bs-theme="dark" style="background-color: black;">
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" style="background-color: black;" href="#">HomeLink</a>
   </header>
 
   <div class="container-fluid">
     <div class="row flex-nowrap">
-      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-        <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: black;">
+        <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100" style="background-color: black;">
           <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <span class="fs-5 d-none d-sm-inline">Menu</span>
           </a>
