added support page

--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -207,11 +207,11 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link px-0 align-middle">
+              <a href="support.html" class="nav-link px-0 align-middle">
                 <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Support</span></a>
             </li>
             <li>
-              <a href="#" class="nav-link px-0 align-middle">
+              <a href="settings.html" class="nav-link px-0 align-middle">
                 <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Settings</span> </a>
             </li>
           </ul>
