--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -190,7 +190,7 @@
   </svg>
 
   <header class="navbar sticky-top flex-md-nowrap p-0 shadow" data-bs-theme="dark" style="background-color: black;">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" style="background-color: black;" href="#">HomeLink</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">HomeLink</a>
   </header>
 
   <div class="container-fluid">
@@ -219,7 +219,34 @@
         </div>
       </div>
       <div class="col py-3">
-        Content area...
+        <div class="row">
+            <nav class="navbar bg-body-tertiary">
+                <form class="container-fluid">
+                  <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">Search Bar</span>
+                    <input type="text" class="form-control" placeholder="Input Search Here" aria-label="Username" aria-describedby="basic-addon1">
+                  </div>
+                </form>
+              </nav>
+            <div class="col-sm-6 mb-3 mb-sm-0">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </div>
