--- a/implementation/index.html
+++ b/implementation/index.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbarstyles.css">
+    <link rel="stylesheet" href="dashboardstyles.css">
 </head>
 <body>
     <div class="full_screen">
@@ -21,6 +22,18 @@
                 <image class="navbar_notif" src="assets/notif_icon.png"></image>
                 <image class="navbar_profile" src="assets/profile.png"></image>
             </nav>
+
+            <div class="row body_content">
+                <div class="col-md-2" style="width: 16.87vw;">
+                    <image src="assets/dashboard_icon.png"/>&emsp;&emsp;<span class="white">Dashboard</span>
+                    <div class="support_nav"><image src="assets/help_nav.png"/>&emsp;&emsp;Support</div>
+                    <div class="support_nav"><image src="assets/setting_icon.png"/>&emsp;&emsp;Settings</div>
+                </div>
+                <div class="col-md-10">
+                    <br/><br/><br/><br/>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
