adding additional pages and routing

--- a/implementation/support.html
+++ b/implementation/support.html
@@ -25,9 +25,9 @@
 
             <div class="row body_content">
                 <div class="col-md-2" style="width: 16.87vw;">
-                    <image src="assets/dashboard_icon.png"/>&emsp;&emsp;<span class="white">Dashboard</span>
-                    <div class="support_nav"><image src="assets/help_nav.png"/>&emsp;&emsp;Support</div>
-                    <div class="support_nav"><image src="assets/setting_icon.png"/>&emsp;&emsp;Settings</div>
+                    <image src="assets/dashboard_icon.png"/>&emsp;&emsp;<a href="dashboard.html" class="grey">Dashboard</a>
+                    <div class="support_nav"><image src="assets/help_nav.png"/>&emsp;&emsp;<a href="support.html" class="white">Support</a></div>
+                    <div class="support_nav"><image src="assets/setting_icon.png"/>&emsp;&emsp;<a href="settings.html" class="grey">Settings</a></div>
                 </div>
                 <div class="col-md-10">
                     <br/><br/><br/><br/>
