--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -107,8 +107,8 @@
     <nav class="navbar navbar-inverse" style="background-color: black;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand text-white" href="index.html">HomeLink</a>
-            </div>
+                <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
+              </div>
             <ul class="nav navbar-nav navbar-right">
                 <form class="d-flex p-1" role="search">
                     <button class="btn btn-outline-primary me-2" type="submit">Login</button>
@@ -123,23 +123,19 @@
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: black;">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"
                     style="background-color: black;">
-                    <a href="/"
-                        class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                        <span class="fs-5 d-none d-sm-inline">Menu</span>
-                    </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
                         id="menu">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link align-middle px-0">
+                            <a href="index.html" class="nav-link align-middle px-0 text-white">
                                 <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="support.html" class="nav-link px-0 align-middle">
+                            <a href="support.html" class="nav-link px-0 align-middle text-white">
                                 <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Support</span></a>
                         </li>
                         <li>
-                            <a href="settings.html" class="nav-link px-0 align-middle">
+                            <a href="settings.html" class="nav-link px-0 align-middle text-white">
                                 <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Settings</span>
                             </a>
                         </li>
