--- a/implementation/support.html
+++ b/implementation/support.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="navbarstyles.css">
     <link rel="stylesheet" href="dashboardstyles.css">
 </head>
+
 <body>
     <div class="full_screen">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <image class="navbar_logo" src="assets/logo.png"></image>
                 <div class="dashboard_text">Dashboard</div>
-                <input type="text" class="navbar_search" placeholder="Search type of keywords"/>
+                <input type="text" class="navbar_search" placeholder="Search type of keywords" />
                 <image class="navbar_help" src="assets/help_icon.png"></image>
                 <image class="navbar_notif" src="assets/notif_icon.png"></image>
                 <image class="navbar_profile" src="assets/profile.png"></image>
@@ -25,16 +34,23 @@
 
             <div class="row body_content">
                 <div class="col-md-2" style="width: 16.87vw;">
-                    <image src="assets/dashboard_icon.png"/>&emsp;&emsp;<a href="dashboard.html" class="grey">Dashboard</a>
-                    <div class="support_nav"><image src="assets/help_nav.png"/>&emsp;&emsp;<a href="support.html" class="white">Support</a></div>
-                    <div class="support_nav"><image src="assets/setting_icon.png"/>&emsp;&emsp;<a href="settings.html" class="grey">Settings</a></div>
+                    <image src="assets/dashboard_icon.png" />&emsp;&emsp;<a href="dashboard.html"
+                        class="grey">Dashboard</a>
+                    <div class="support_nav">
+                        <image src="assets/help_nav.png" />&emsp;&emsp;<a href="support.html" class="white">Support</a>
+                    </div>
+                    <div class="support_nav">
+                        <image src="assets/setting_icon.png" />&emsp;&emsp;<a href="settings.html"
+                            class="grey">Settings</a>
+                    </div>
                 </div>
                 <div class="col-md-10">
-                    <br/><br/><br/><br/>
+                    <br /><br /><br /><br />
                 </div>
             </div>
 
         </div>
     </div>
 </body>
+
 </html>
