--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -105,10 +105,12 @@
 
 <body>
     <nav class="navbar navbar-inverse" style="background-color: black;">
-        <div class="container-fluid">
+        <div class="container-fluid align-items-center">
             <div class="navbar-header">
                 <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
-              </div>
+            </div>
+            <h3 class="text-white" style="font-size: 24px;">Dashboard</h3>
+            <input type="text" class="navbar_search" placeholder="Search type of keywords" />
             <ul class="nav navbar-nav navbar-right">
                 <form class="d-flex p-1" role="search">
                     <button class="btn btn-outline-primary me-2" type="submit">Login</button>
