--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -144,8 +144,8 @@
           <hr>
         </div>
       </div>
-      <div class="col py-3">
-        Content area...
+      <div class="col py-3" style="background-color: black;">
+        <p class="text-white">Content here...</p>
       </div>
     </div>
   </div>
