--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -145,7 +145,7 @@
                     <hr>
                 </div>
             </div>
-            <div class="col py-3">
+            <div class="col py-3" style="background-color: black;">
                 <div class="row">
                     <div class="col-sm-6 mb-3 mb-sm-0">
                         <div class="card">
