--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -145,9 +145,9 @@
                     <hr>
                 </div>
             </div>
-            <div class="col py-3">
+            <div class="col py-3" style="background-color: black;">
                 <div class="row">
-                    <nav class="navbar bg-body-tertiary">
+                    <nav class="navbar">
                         <form class="container-fluid">
                             <div class="input-group">
                                 <span class="input-group-text" id="basic-addon1">Search Bar</span>
@@ -156,7 +156,7 @@
                             </div>
                         </form>
                     </nav>
-                    <div class="col-sm-6 mb-3 mb-sm-0">
+                    <div class="col-sm-6 mb-3 mb-sm-0 mt-4">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Special title treatment</h5>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 mt-4">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Special title treatment</h5>
