searchbar title added

--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -146,11 +146,13 @@
                 </div>
             </div>
             <div class="col py-3" style="background-color: black;">
+                <div class="d-flex justify-content-center text-white">
+                    <h3>Help</h3>
+                </div>
                 <div class="row">
                     <nav class="navbar">
                         <form class="container-fluid">
                             <div class="input-group">
-                                <span class="input-group-text" id="basic-addon1">Search Bar</span>
                                 <input type="text" class="form-control" placeholder="Input Search Here"
                                     aria-label="Username" aria-describedby="basic-addon1">
                             </div>
