settings title added

--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -147,6 +147,9 @@
             </div>
             <div class="col py-3" style="background-color: black;">
                 <div class="row">
+                    <div class="d-flex justify-content-center text-white">
+                        <h3>Settings</h3>
+                    </div>
                     <div class="col-sm-6 mb-3 mb-sm-0">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
