--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -94,6 +94,18 @@
         .bd-mode-toggle .dropdown-menu .active .bi {
             display: block !important;
         }
+
+        .search_field {
+            background: linear-gradient(to right, white, #EDBAFF), url('images/search-normal.svg') no-repeat right 10px center;
+            background-size: auto, 20px; /* Auto for gradient, 20px for search icon */
+            border: none;
+            border-radius: 10px;
+        }
+
+        .search_field input {
+            background: none;
+            border: none;
+        }
     </style>
 
 
@@ -101,6 +113,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+    <link href="support.css" rel="stylesheet">
 </head>
 
 <body>
@@ -148,16 +161,19 @@
             <div class="col py-3" style="background-color: black;">
                 <div class="row">
                     <nav class="navbar">
-                        <form class="container-fluid">
-                            <div class="input-group">
-                                <span class="input-group-text" id="basic-addon1">Search Bar</span>
-                                <input type="text" class="form-control" placeholder="Input Search Here"
+                        <form class="container-fluid d-flex justify-content-center">
+                            <div class="input-group search_field">
+                                <input type="text" class="form-control" placeholder="What do you need help with?"
+                                    aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                            <div class="input-group search_icon_field">
+                                <input type="text" class="form-control search_icon"
                                     aria-label="Username" aria-describedby="basic-addon1">
                             </div>
                         </form>
                     </nav>
-                    <div class="col-sm-6 mb-3 mb-sm-0 mt-4">
-                        <div class="card" style="background-color: #0E45B7;">
+                    <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
+                        <div class="card custom_card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
@@ -166,8 +182,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 mb-3 mb-sm-0 mt-4">
-                        <div class="card" style="background-color: #0E45B7;">
+                    <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
+                        <div class="card custom_card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
